# koi-mcp

./: .gitignore  README.md  code.xml  pyproject.toml  requirements.txt
configs/: agent1.json  agent2.json  coordinator.json
docs/: design-doc.md  design.md  package.md
scripts/: demo.py
src/: code.txt
src/koi_mcp/: config.py  main.py
src/koi_mcp/koi/handlers/: personality_handlers.py
src/koi_mcp/koi/node/: agent.py  coordinator.py
src/koi_mcp/personality/: rid.py
src/koi_mcp/personality/models/: profile.py  trait.py
src/koi_mcp/server/adapter/: mcp_adapter.py
src/koi_mcp/server/agent/: agent_server.py
src/koi_mcp/server/registry/: registry_server.py
src/koi_mcp/utils/async/: retry.py
src/koi_mcp/utils/logging/: setup.py
tests/koi/: test_handlers.py  test_node.py
tests/personality/: test_edge_cases.py  test_rid.py
tests/server/: test_adapter.py
