[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koi-mcp"
version = "0.1.0"
description = "KOI-MCP Integration for Agent Personality Exchange"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pydantic==2.11.3",
    "httpx==0.28.1",
    "rid-lib==3.2.5",
    "koi-net==1.0.0b12",
    "rich==14.0.0",
    "typing-extensions==4.13.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
koi-mcp-coordinator = "koi_mcp.main:run_coordinator"
koi-mcp-agent = "koi_mcp.main:run_agent"
koi-mcp-demo = "koi_mcp.main:run_demo"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["koi_mcp"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py312"]